testsuite/tests/rep-poly/RepPolyMcGuard.stderr

RepPolyMcGuard.hs:30:16: error:
    • The first argument of the rebindable syntax operator ‘guard’
        arising from a statement in a monad comprehension
      does not have a fixed runtime representation.
      Its type is:
        a0 :: TYPE c0
      Cannot unify ‘rep’ with the type variable ‘c0’
      because it is not a concrete ‘RuntimeRep’.
    • In a stmt of a monad comprehension: undefined
      In the expression: [() | undefined]
      In an equation for ‘foo’: foo _ = [() | undefined]
    • Relevant bindings include
        foo :: () -> ma (bound at RepPolyMcGuard.hs:30:1)
